Additional unit test