@@ -14,6 +14,7 @@ package com.adobe.aem.analyser.mojos;
 import org.apache.maven.model.Build;
 import org.apache.maven.model.Dependency;
 import org.apache.maven.project.MavenProject;
+import org.apache.sling.cpconverter.maven.mojos.ContentPackage;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -22,8 +23,8 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Comparator;
+import java.util.List;
 
 import static com.adobe.aem.analyser.mojos.MojoUtils.setParameter;
 import static org.junit.Assert.assertEquals;
@@ -47,7 +48,7 @@ public class ConvertToFeatureModelMojoTest {
     }
 
     @Test
-    public void testExecute() throws Exception {
+    public void testExecuteAEMAnalyseProject() throws Exception {
         ConvertToFeatureModelMojo mojo = new ConvertToFeatureModelMojo();
         mojo.unitTestMode = true;
 
@@ -55,6 +56,10 @@ public class ConvertToFeatureModelMojoTest {
         dep.setType("zip");
         dep.setGroupId("dg");
         dep.setArtifactId("da");
+        Dependency dep2 = new Dependency();
+        dep2.setType("pom");
+        dep2.setGroupId("dg2");
+        dep2.setArtifactId("da2");
 
         Build build = new Build();
         build.setDirectory(tempDir.toString());
@@ -64,20 +69,61 @@ public class ConvertToFeatureModelMojoTest {
         prj.setArtifactId("a");
         prj.setVersion("7");
         prj.setBuild(build);
-        prj.setDependencies(Collections.singletonList(dep));
+        prj.setDependencies(List.of(dep, dep2));
+        prj.setPackaging(ConvertToFeatureModelMojo.AEM_ANALYSE_PACKAGING);
 
         setParameter(mojo, "project", prj);
 
         mojo.execute();
 
-        assertTrue((Boolean) TestUtil.getField(
-                mojo, mojo.getClass(), "installConvertedCP"));
-        File cpOutputDir = (File) TestUtil.getField(
-                mojo, mojo.getClass(), "convertedCPOutput");
+        assertTrue((Boolean) TestUtil.getField(mojo, "installConvertedCP"));
+        File cpOutputDir = (File) TestUtil.getField(mojo, "convertedCPOutput");
         Path cpP = cpOutputDir.toPath();
         assertEquals(tempDir, cpP.getParent());
-        File fmOutDir = (File) TestUtil.getField(
-                mojo, mojo.getClass(), "fmOutput");
+        File fmOutDir = (File) TestUtil.getField(mojo, "fmOutput");
         assertEquals(cpP, fmOutDir.toPath().getParent());
+
+        @SuppressWarnings("unchecked")
+        List<ContentPackage> cpl = (List<ContentPackage>) TestUtil.getField(
+                mojo, "contentPackages");
+        assertEquals(1, cpl.size());
+        ContentPackage cp = cpl.get(0);
+        assertEquals("dg", TestUtil.getField(cp, "groupId"));
+        assertEquals("da", TestUtil.getField(cp, "artifactId"));
+    }
+
+    @Test
+    public void testExecuteCurrentProject() throws Exception {
+        ConvertToFeatureModelMojo mojo = new ConvertToFeatureModelMojo();
+        mojo.unitTestMode = true;
+
+        Build build = new Build();
+        build.setDirectory(tempDir.toString());
+
+        MavenProject prj = new MavenProject();
+        prj.setGroupId("g");
+        prj.setArtifactId("a");
+        prj.setVersion("7");
+        prj.setBuild(build);
+        // Note project has no packaging set
+
+        setParameter(mojo, "project", prj);
+
+        mojo.execute();
+
+        assertTrue((Boolean) TestUtil.getField(mojo, "installConvertedCP"));
+        File cpOutputDir = (File) TestUtil.getField(mojo, "convertedCPOutput");
+        Path cpP = cpOutputDir.toPath();
+        assertEquals(tempDir, cpP.getParent());
+        File fmOutDir = (File) TestUtil.getField(mojo, "fmOutput");
+        assertEquals(cpP, fmOutDir.toPath().getParent());
+
+        @SuppressWarnings("unchecked")
+        List<ContentPackage> cpl = (List<ContentPackage>) TestUtil.getField(
+                mojo, "contentPackages");
+        assertEquals(1, cpl.size());
+        ContentPackage cp = cpl.get(0);
+        assertEquals("g", TestUtil.getField(cp, "groupId"));
+        assertEquals("a", TestUtil.getField(cp, "artifactId"));
     }
 }
